# ECE-763-Final-Project

./: .gitignore  .gitmodules  MATLAB_Benchmark.m  ORBDetect.ipynb  README.md  basics review.ipynb  lenet.py  numpy_Benchmark.py  preprocess.ipynb  tensorflow-basics.py  tensorflow_basic_net.ipynb  tensorflow_basic_net.py  tensorflow_basic_net_inference.py  tensorflow_basic_net_inference_image.py  tensorflow_basic_net_inference_webcam.py  tensorflow_cnn.ipynb  tensorflow_cnn.py  tensorflow_cnn_inference.py
.ipynb_checkpoints/: preprocess-checkpoint.ipynb
Benchmarks/: MATLAB_Benchmark.m  numpy_Benchmark.py
Eigen Benchmark/EigenTest/: CMakeLists.txt  EigenTest.sln  c++_benchmark.cpp
Eigen Benchmark/EigenTest/EigenTest/: EigenTest.vcxproj  EigenTest.vcxproj.filters
OpenCVDNNTest/: CMakeLists.txt  caffeinference.cpp
logs/basic_net/: events.out.tfevents.1523041546.hariharan-GL502VT  events.out.tfevents.1523231648.HARIHARAN-PC  events.out.tfevents.1523459412.HARIHARAN-PC
logs/cnn/: events.out.tfevents.1523046154.hariharan-GL502VT  events.out.tfevents.1523047304.hariharan-GL502VT  events.out.tfevents.1523133338.hariharan-GL502VT  events.out.tfevents.1523135493.hariharan-GL502VT  events.out.tfevents.1523228585.HARIHARAN-PC  events.out.tfevents.1523229848.HARIHARAN-PC  events.out.tfevents.1523230406.HARIHARAN-PC  events.out.tfevents.1523234310.HARIHARAN-PC  events.out.tfevents.1523234719.HARIHARAN-PC
logs/cnn/lenet/: events.out.tfevents.1523135339.hariharan-GL502VT  events.out.tfevents.1523135412.hariharan-GL502VT
trained-models/: my_final_model.index  my_test_model.index
